--- a/style.css
+++ b/style.css
@@ -204,6 +204,34 @@ font-size: 25px;
 margin: 4px;
 }
 
+.intro_title {
+    display: inline;
+    font-family: cursive;
+    font-size: 20px;
+    box-sizing: border-box;
+    border: none;
+    margin: 15px;
+    padding: 10px;
+    text-align: center;
+    text-shadow: 3px 3px 5px #1f1c1c;
+display: inline-block;
+background: rgba(136, 124, 124, 0.644);
+padding: 10px;
+border-radius: 5px;
+}
+
+.intro_content {
+    display: inline-block;
+    font-family: cursive;
+    margin: 20px;
+    font-size: 20px;
+    text-shadow: 3px 3px 5px #1f1c1c;
+    background-color: #139c9c86;
+    padding: 15px;
+    border-radius: 20px;
+
+}
+
 .introduccion_dos  {
         display: inline;
         text-shadow: 3px 3px 5px #1f1c1c;
@@ -253,8 +281,10 @@ margin: 4px;
 .list_toilet:last-child {
     font-family: sans-serif;
     background-color: #1011112f;
-    padding: 10px;
+    padding: 15px;
+    font-weight: bolder;
     border-radius: 0 0 20px 20px;
+    font-size: 25px;
     }
 
 
@@ -265,6 +295,22 @@ margin: 4px;
     border-radius: 5px;
 }
 
+.post-info {
+    font-size: 20px;
+    text-align: center;
+    padding: 20px;
+    margin: 15px;
+    background-color: #272ac2b0;
+    border-radius: 20px;
+}
+.junior-item {
+    text-align: center;
+    padding:10px;
+    margin: 5px;
+    font-size: 25px;
+    background: rgba(20, 220, 203, 0.767);
+    border-radius: 10px;
+}
 
 .Projects_container {
     display: inline-block;
@@ -310,6 +356,40 @@ margin-left: 250px;
 position: absolute;
 }
 
+.junior_project {
+    padding: 250px;
+    margin-left: 40px;
+    margin-top: -250px;
+}
+.junior_image {
+width: 800px
+}
+
+.junior_title {
+    background-color: #2bb1b18e;
+    border-radius: 20px;
+    text-align:center;
+    font-size: 30px;
+    padding: 15px;
+margin-top: -280px;
+margin-left: 200px;
+position: absolute;
+
+color: rgb(240, 240, 240);
+
+}
+
+.junior_Subtitle {
+    background-color: #66b431b0;
+    border-radius: 10px;
+    text-align:center;
+    padding: 10px;
+margin: 10px;
+color: rgb(240, 239, 239);
+margin-top: -50px;
+margin-left: 250px;
+position: absolute;
+}
 .information_box {
     padding: 20px;
 background-color: #2a48aa;
