--- a/style.css
+++ b/style.css
@@ -293,8 +293,11 @@ border-radius: 5px;
     padding: 10px;
     margin: auto;
     border-radius: 5px;
+    transition: all 0.3s ease-in-out;
 }
-
+.info_extra_container {
+    background-color: #288a3d75;
+}
 .post-info {
     font-size: 20px;
     text-align: center;
@@ -302,6 +305,10 @@ border-radius: 5px;
     margin: 15px;
     background-color: #272ac2b0;
     border-radius: 20px;
+    transition: all 0.3s ease-in-out;
+}
+.post-info:hover {
+    background-color:#2022a7b0;
 }
 .junior-item {
     text-align: center;
@@ -310,10 +317,17 @@ border-radius: 5px;
     font-size: 25px;
     background: rgba(20, 220, 203, 0.767);
     border-radius: 10px;
+transition: all 0.3s ease-in-out;
+}
+.junior-item:hover {
+font-size: 27px;
+background-color:rgba(20, 202, 187, 0.767);
+text-shadow: 0 0 3px #fff;
 }
 
 .Projects_container {
-    display: inline-block;
+    display: flex;
+    flex-direction: row;
 }
 
 /* background-image: url(biodigestor.jpg);
@@ -322,14 +336,14 @@ background-size: 900px; /*/
 
 .Biodigestor_project {
     padding: 250px;
+    padding-top: 0px;
     margin-left: 40px;
     margin-top: 200px;
 }       
 
 .biodigestor_image  {
-width: 700px; /* Ajusta el tamaño máximo de la imagen según tus necesidades */
-  }
-
+width: 700px; 
+}
 .Biodigestor_Title {
     background-color: #1f77778e;
     border-radius: 20px;
